<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/location"
        android:id="@+id/nav_location"/>


    <item android:icon="@drawable/shopcart"
        android:title="@string/Orderhis"
        android:id="@+id/nav_shop"/>

    <item
        android:id="@+id/nav_inbox"
        android:icon="@android:drawable/sym_action_email"
        android:title="@string/nav_inbox"/>
    <item
        android:id="@+id/nav_sent"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_sent"/>


    <item android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/distance"
        android:id="@+id/nav_distance"/>

    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_language_black_24dp"
                android:title="@string/web"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback"/>
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/privacy"
                android:title="@string/privacy"/>

            <item android:icon="@drawable/logout"
                android:title="@string/logout"
                android:id="@+id/nav_signup"/>
        </menu>
    </item>

</menu>