<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StopWatechActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/teal">
    <include
        android:id="@+id/toolbarp"
        layout="@layout/toolbar_main"/>

    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="56sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="40sp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:onClick="callstart"
        android:background="@color/slategray"
        android:text="@string/start"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/slategray"
        android:layout_marginBottom="20dp"
        android:textSize="40sp"

        android:onClick="callstop"
        android:text="@string/stop"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="40sp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/slategray"
        android:onClick="callrestart"
        android:text="@string/restart"/>


</LinearLayout>
