<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MixOrderActivity"
    android:background="@color/slategray">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/teal"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/one"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/teal"
        android:padding="10dp"
        android:text="@string/rate"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/teal"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/plus"
        android:textSize="40sp"
        android:background="@color/colorPrimary"
        android:onClick="increaseprice"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/button6"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/minus"
        android:background="@color/colorPrimary"
        android:textSize="40sp"
        android:onClick="decreaseprice"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/teal"
        android:padding="10dp"
        android:text="@string/total"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <Button
        android:id="@+id/button7"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/order"
        android:background="@color/teal"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:onClick="mypayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />


</androidx.constraintlayout.widget.ConstraintLayout>